[gd_scene load_steps=8 format=2]

[ext_resource path="res://textures/tilesets/cards.png" type="Texture" id=1]
[ext_resource path="res://scripts/objects/card_item.gd" type="Script" id=2]
[ext_resource path="res://resources/fonts/title_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/fonts/description_font.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.843137, 0.843137, 0.843137, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 100, 100 )

[node name="CardItem" type="Panel"]
rect_min_size = Vector2( 150, 240 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_right = 130.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
custom_styles/separator = SubResource( 3 )

[node name="card_name" type="Label" parent="VBoxContainer"]
margin_top = 14.0
margin_right = 130.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "card_name"
align = 1
autowrap = true
uppercase = true

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 130.0
margin_bottom = 59.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 3
custom_styles/separator = SubResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 63.0
margin_right = 130.0
margin_bottom = 163.0
mouse_filter = 1

[node name="card_icon" type="TextureRect" parent="VBoxContainer/CenterContainer"]
margin_left = 15.0
margin_right = 115.0
margin_bottom = 100.0
mouse_filter = 2
texture = SubResource( 4 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 167.0
margin_right = 130.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 3
custom_styles/separator = SubResource( 3 )

[node name="card_description" type="Label" parent="VBoxContainer"]
margin_top = 194.0
margin_right = 130.0
margin_bottom = 206.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "card_description"
align = 1
autowrap = true

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
margin_top = 210.0
margin_right = 130.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 10 )
custom_styles/separator = SubResource( 3 )

[connection signal="gui_input" from="." to="." method="_on_CardItem_gui_input"]
